# simple-chat

./: CHANGELOG.md  README.md  db_init.sql  fpss21-project.cabal
app/: Main.hs  index.html
app/css/: fpss21-project.css
app/js/: fpss21-project.js
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
